thoughts on connections

--- a/smoothness/smoothness.tex
+++ b/smoothness/smoothness.tex
@@ -4,6 +4,7 @@
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{amsthm}
+\usepackage{tikz-cd}
 
 %%% Common categories
 \newcommand{\tp}{\;\mathrm{type}}
@@ -13,7 +14,7 @@
 \newcommand{\pitxa}{\pit{x:A}}
 \newcommand{\sit}[1]{\sum_{(#1)}} % sigma-type
 \newcommand{\ent}{\vdash}
-\newcommand{\adj}{\vdash}
+\newcommand{\adj}{\dashv}
 \newcommand{\refl}{\ensuremath{\textsf{refl}}}
 \newcommand{\ap}{\ensuremath{\textsf{ap}}}
 \newcommand{\ind}{\ensuremath{\textsf{ind}}}
@@ -34,6 +35,7 @@
 \newcommand{\rrn}{\ensuremath{\mathbb{R}^n}}
 \newcommand{\rrm}{\ensuremath{\mathbb{R}^m}}
 \newcommand{\rrx}{\ensuremath{\mathbb{R}[x]/x^2}}
+\newcommand{\rry}{\ensuremath{\mathbb{R}[y]/y^2}}
 \newcommand{\cc}{\ensuremath{\mathbb{C}}}
 \newcommand{\nn}{\ensuremath{\mathbb{N}}}
 \newcommand{\dd}{\ensuremath{\mathbb{D}}}
@@ -44,10 +46,13 @@
 \newcommand{\cart}{\textsf{CartSp}}
 \newcommand{\formalcart}{\textsf{FormalCartSp}}
 \newcommand{\formalsmoothset}{\textsf{FormalSmoothSet}}
+\newcommand{\smoothset}{\textsf{SmoothSet}}
 \newcommand{\setcat}{\textsf{Set}}
 \newcommand{\psh}[1]{\textsf{Psh}(#1)}
 \newcommand{\sh}[1]{\textsf{Sh}(#1)}
 \newcommand{\pshcart}{\psh{\cart}}
+\newcommand{\rmodal}{\Re}
+\newcommand{\imodal}{\Im}
 
 \newcommand{\gc}[1]{\marginpar{\bf $\leftarrow$ {#1}}}
 %\newcommand{\gc}[1]{}
@@ -272,11 +277,9 @@ First we'll look at the functors in \formalcart, and then extend them to sheaves
 
 Projection:
 \begin{align*}
-p:\formalcart &\to\cart \\
+pr:\formalcart &\to\cart \\
 \rr^n\times\dd &\mapsto \rr^n \\
 \cinfty(\rrn)\otimes\rrx &\mapsto \cinfty(\rrn)\otimes\rr \\
-f\otimes(a+bx) &\mapsto f\otimes a \\
-\mathrm{point\ with\ fuzz} &\mapsto \mathrm{point}
 \end{align*}
 
 Inclusion:
@@ -285,17 +288,25 @@ Inclusion:
 i:\cart &\hookrightarrow\formalcart \\
 \rrn &\mapsto \rrn\times\dd_0 \\
 \cinfty(\rrn)\otimes\rr &\mapsto\cinfty(\rrn)\otimes\rrx \\
-f\otimes a &\mapsto f\otimes(a+0x) \\
-\mathrm{point} &\mapsto \mathrm{point\ with\ trivial\ fuzz}
 \end{align*}
 
-\begin{myclaim}$i\adj p$ and so \cart is coreflective inside \formalcart.\end{myclaim}
+Tangent:
+
+\begin{align*}
+T:\formalcart &\hookrightarrow\formalcart \\
+\rrn\times\dd_1 &\mapsto \rrn\times\dd_1\times\dd_2 \\
+\cinfty(\rrn)\otimes\rrx &\mapsto\cinfty(\rrn)\otimes\rrx\otimes\rry \\
+\end{align*}
+
+A tangent bundle $TM$ comes equipped with a projection map $p:TM\to M$ and a zero map $0:M\to TM$. In our setting $p$ and $0$ become natural transformations $p:T\to\id$ and $0:\id\to T$. We can see that $0=i\circ pr$ and $p=$.
+
+\begin{myclaim}$i\adj p$ and so \cart\ is coreflective inside \formalcart.\end{myclaim}
 
 \begin{proof}
 \begin{align*}
 \Hom_{\formalcart}(i(\rrn), \rrm\times\dd) &= \Hom_{\formalcart}(\rrn\times\dd_0, \rrm\times\dd) \\
-&\cong \Hom(\cinfty(\rrm)\otimes\rr\oplus\vv, \cinfty(\rrn)) \\
-&\cong \Hom(\cinfty(\rrm)\otimes\rr, \cinfty(\rrn))\quad\mathrm{(nilpotents\ must\ map\ to\ 0)} \\
+&\cong \Hom_{\calg}(\cinfty(\rrm)\otimes\rr\oplus\vv, \cinfty(\rrn)) \\
+&\cong \Hom_{\calg}(\cinfty(\rrm)\otimes\rr, \cinfty(\rrn))\quad\mathrm{(nilpotents\ must\ map\ to\ 0)} \\
 &\cong \Hom_{\cart}(\rrn, \rrm) \\
 &\cong \Hom_{\cart}(\rrn, p(\rrm\times\dd))
 \end{align*}
@@ -304,12 +315,93 @@ One must also show these are all natural in both slots.
 
 Note the finding from line 2-3: maps from a nilpotent algebra to one with no nilpotents must be trivial on the nilpotents, i.e. \emph{a space without fuzz cannot probe fuzz}.
 
-Functors, like $i$, induce three functors on presheaves. For an elementary introduction see Awodey \cite{awodey_introduction_2010}, especially Corollary~9.17.\gc{draw diagram for Kan extensions} 
+Functors, like $i$, induce three functors on presheaves. For an elementary introduction see Awodey \cite{awodey_introduction_2010}, especially Corollary~9.17.
+
+$$
+\begin{tikzcd}[row sep=huge, column sep=huge]
+\smoothset \arrow[r, "\mkern-16mu i_!"{name=F}, bend left=25]
+\arrow[r, "\quad i^*"{name=G}]
+\arrow[phantom, from=F, to=G, "\ \dashv" rotate=-90]
+& \formalsmoothset \arrow[l, "\mkern-12mu i_*"{name=H}, swap, bend left=25]
+\arrow[phantom, from=G, to=H, "\ \dashv" rotate=-90] \\
+\cart \arrow[u, "y"] \arrow[r, "i"{name=I}, shift left=2.0ex] 
+& \formalcart \arrow[l, "p"{name=P}, shift left=2.0ex, swap] 
+\arrow[u, "y", swap]
+\arrow[phantom, from=I, to=P, "\dashv" rotate=-90]
+\end{tikzcd}
+$$
 
 What do these extensions do?
 
+$i^*$ is the precomposition functor. Let $fss\in\formalsmoothset$ and $\rrn\in\cart$. Then $$i^*(fss)(\rrn)=fss(i\rrn).$$ And on representables
+\begin{align*}
+\Hom_{\formalsmoothset}(y\rrm\times\dd, i_*y\rrn) &\cong \Hom_{\smoothset}(i^*y\rrm\times\dd, y\rrn) \\
+&\cong \Hom_{\smoothset} (yp\rrm\times\dd, y\rrn)\quad(\mathrm{because\ }i^*y=yp)\\
+&\cong \Hom_{\cart} (\rrm, \rrn)
+\end{align*}
+
+This is a hint that it is taking a space to one that cannot be probed by the infinitesials.
+
+We can package all of these considerations into endofunctors on just FSS:
+\begin{align*}
+\rmodal &= i_!\circ i^* \\
+\imodal &= i_*\circ i^*
+\end{align*}
+On representables
+\begin{align*}
+\rmodal(y\rrm\times\dd) &= i_!i^*(y\rrm\times\dd) \\
+&= i_!y\rrm \\
+&= yi\rrm \\
+&= y\rrm\times\dd_0
+\end{align*}
+and so "reduction" just projects away the nilpotent parts of a (representable) formal smooth set.
+
+We also have $\rmodal\adj\imodal$:
+\begin{align*}
+\Hom_{\formalsmoothset}(U, \imodal M)&\cong\Hom_{\formalsmoothset}(U,i_* i^*M) \\
+&\cong \Hom_{\smoothset}(i^*U, i^*M) \\
+&\cong \Hom_{\formalsmoothset}(i_!i^*U, M) \\
+&\cong \Hom_{\formalsmoothset}(\rmodal U, M)
+\end{align*}
+And so what if we start with $\Hom_{\formalcart}(\rrm\times\dd, \rrn\times\dd')$ and t hen hit the right hand space with $\imodal$?
+\begin{align*}
+\Hom_{\formalsmoothset}(y\rrm\times\dd, \imodal y\rrn\times\dd') &\cong \Hom_{\formalsmoothset}(\rmodal y\rrm\times\dd, y\rrn\times\dd') \\
+&\cong \Hom_{\formalsmoothset}(y\rrm\times\dd_0, y\rrn\times\dd') \\
+&\cong \Hom_{\formalcart}(\rrm\times\dd_0, \rrn\times\dd')
+\end{align*}
+and so a coreduced FSS is one whose probes, even with nilpotents, cannot see the tangent directions. Its tangent directions are collapsed or identified. 
+
+“Infinitesimally close points are identified.”
+
+So in spirit there is a relation “x and y are infinitesimally close” which connects with SDG. But now we can get at it with a modal operator.
+
+
+
 \section{The modality}\label{sec:modality}
 Differential cohesion is most gently introduced by Khavkine and Schreiber in \cite{khavkine_synthetic_2017} and plays a large role in Schreiber's magnum opus \cite{schreiber_differential_2013}.
+
+\section{Towards connections}
+To have connections we need both $TM$ and $TTM$. Eventually we need to define vector bundles $E$ as a slice category, and then we'll need $TE$. But in the case of $TTM$ how can we get there with an idempotent modality?
+
+I think the key is to introduce a variable into the modal operator: $\imodal_x, \imodal_y$. At the algebra level these will come from $$\cinfty(\rrn)\otimes\rrx\otimes\rry = \cinfty(\rrn)\otimes\rr[x, y]/(x^2, y^2)$$. Each modal operator is idempotent. Adding the $x$ variable again doesn't provide more fuzziness, or more tangency, or more directions to differentiate in. But adding $y$ does.
+
+It's crucial that the differentiation these variables are doing will commute with each other, so that it doesn't matter which one was tensored outermost.
+
+Having the $x$ lets you differentiate everything, and adding $y$ lets you differentiate everything including the $x$ (i.e. there are now terms in $xy$).
+
+If $\rrx$ leads to an interpretation of $\imodal_x$ then we can indeed have two of them.
+
+I also want to add a functor $T$ with $TA=A[x]/x^2$ which I hope is equal to $A\otimes_{\rr}\rrx$. Perhaps the unit of this is the zero section. Then we would have two functors, $I$ and $T$, and the units are $p$ and $i$. We'll need better names. $T$ and $I$ are inverses on the nose. The Kan extensions will convert between sets of probes that can see the tangent space and those that cannot.
+
+When there are two modalities, the Kan extensions will move between sets of probes that can see 0, 1 or 2 iterated copies of the tangent space.
+
+There is always a map $TTM\to T_2 M=TM\times_M TM$, where the rhs is the pullback of $TM$ by $p$, i.e. each fiber over $M$ is two copies of the tangent bundle.\gc{what about Lang's claim that $T_2 M$ is only a fiber bundle not a vector bundle?}
+
+A connection is a section of this map, so $L:T_2 M\to TTM$. Given two tangent vectors you can lift that pair up to a vector in $TTM$, in fact a horizontal one. The image of the connection map is the horizontal sub-bundle of $TTM$. The kernel of the bundle projection is the vertical sub-bundle.
+
+What types will we have? Apparently we'll have ones that "are $T$ of something" and ones that are not. If you are $T$ of something then you can be probed by nilpotents, and you are not coreduced. Else you are coreduced. To be $T$ of something you must be differentiable everywhere. Perhaps this is why $\sum_{a:A}B(a)$ is coreduced whenever $A$ is.
+
+Infinitesimal closeness is preserved by morphisms. Equivalently, morphisms are bundle morphisms, they preserve the fibers. Is it also equivalent to stipulate that at the algebra level the morphisms hold $x$ fixed?
 
 \bibliographystyle{unsrt}
 \bibliography{smoothness} 
